--- a/css/styles.css
+++ b/css/styles.css
@@ -32,9 +32,26 @@
 }
 
 .header img{
-    width: 100px;
+    
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    animation-name: lineaRecta;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
 }
+@keyframes lineaRecta{
+    0%{
+        transform: translate(0px,0px);
+    }
+    50%{
+        transform: translate(10px,0px);
+    }
+    100%{
+        transform: translate(0px,0px);
+    }
 
+}
 
 
 .navbar{
@@ -96,7 +113,13 @@
     padding: 7px;
     display: flex;
     margin-left: 10px;
+    transition: 2s;
+    width: 100px;
+    height: 40px;
 
+}
+.btn1:hover{
+    transform: scale(1.3);
 }
 
 
@@ -120,7 +143,14 @@
     box-shadow: none;
     text-decoration: none;
     color: #f0f8ff62;
+    transition: 1s;
+    width: 100px;
+    height: 40px;
+    
 
+}
+.btn2 :hover{
+    transform: scale(1.3);
 }
 .btn2 p{
     background-color: #0F2027;
@@ -135,6 +165,11 @@
     height: 300px;
     border-radius: 50%;
     background-size: cover;
+    transition: 2s;
+
+}
+.imgPrincipal:hover{
+    transform: rotateY(360deg);
 
 }
 .aside{
@@ -143,15 +178,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 20px;
 
 }
-.btn1 p{
-    font-size: 40px;
-    margin-top: 10px;
-    padding: 5px;
+.btn3{
+    box-shadow: none;
+    text-decoration: none;
+    font-size: 30px;
+    color: #203A43;
     border: 2px solid #1a3f4e6b;
     border-radius: 50% ;
     background-color: #0F2027;
+    transition: 2s;
+    width: 40px;
+    height: 40px;
+    
+}
+.btn3:hover{
+    transform: scale(1.5);
+
 }
 .footer{
     grid-area: footer;
@@ -172,8 +217,7 @@
     /* flex-direction: row; */
     justify-content: space-around;
     list-style: none;
-
-
+    
 }
 .redesSociales a{
     box-shadow: none;
@@ -182,8 +226,15 @@
     background-color: #0f202762;
     padding: 10px;
     border-radius: 10%;
-}
+    width: 100px;
+    height: 40px;
+    transition: 2s;
 
+
+}
+.redesSociales:hover{
+    transform: scale(1.5);
+}
 
 
 .tarjetas{
