--- a/css/styles.css
+++ b/css/styles.css
@@ -5,36 +5,17 @@
 }
 
 .contenedor{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: auto;
-    grid-template-areas: "header header header"
-                         "main   main   main"
-                         "aside aside   aside"
-                         "footer footer footer"  ;
-    background: #0F2027;  /* fallback for old browsers */
+    
     background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
 
 
-.header{
-    grid-area: header;
-    display: flex;
-    justify-content: center;
-    background-color: #0F2027;
-    align-items: center;
-    padding: 10px;
-    /* margin-top: 20px; */
-    /* color: #f0f8ffcc; */
-
-}
-
-.header img{
+.header div img{
     
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
     animation-name: lineaRecta;
     animation-duration: 2s;
@@ -55,90 +36,22 @@
 
 
 .navbar{
-    grid-area: navbar;
-    /* display: flex; */
-    /* flex-direction: row; */
-    /* justify-content: space-between; */
-    /* border-radius: 5px; */
-    /* margin: 0 20px; */
-}
-/* .navbar div{
-    display: flex;
-    flex-direction: row;
-    order: -1;
-    background-image: url(../imagenes/Letra.png);
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-size: cover;
-    background-color: rgba(255, 255, 255, 0.37);
-    align-items: center;
-
-} */
-.navbar ul{
-
-    display: flex;
-    /* flex-direction: row; */
-    list-style: none;
-    /* justify-content: space-around; */
-    /* border-radius: 4px; */
-    /* padding: 10px; */
-
-    font-size: 20px;
-
+    border-radius: 5px; 
+    background-color: #03101d86;
+    
 }
 
 
-
-
-.main{
-    grid-area: main;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-
-
-}
-
-
-
-
-.btn1{
+a{
     box-shadow: none;
     text-decoration: none;
-    color: #f0f8ff62;
-    background-color: #2c536442;
-    border-radius: 7px;
-    padding: 7px;
-    display: flex;
-    margin-left: 10px;
-    transition: 2s;
-    width: 100px;
-    height: 40px;
-
-}
-.btn1:hover{
-    transform: scale(1.3);
 }
 
 
 .parrafos{
-    display: flex;
-    flex-direction: column;
-    margin: 20px;
-    align-items: center;
     color: #f0f8ff62;
+}
 
-}
-.parrafos h2{
-    margin-bottom: 10px;
-}
-.parrafos div p{
-    margin-top: 15px;
-    font-size: 20px;
-    text-align: center;
-}
 .btn2  {
     box-shadow: none;
     text-decoration: none;
@@ -155,7 +68,7 @@
 .btn2 p{
     background-color: #0F2027;
     border-radius: 7px;
-    padding: 10px;
+    
 }
 
 
@@ -166,6 +79,7 @@
     border-radius: 50%;
     background-size: cover;
     transition: 2s;
+    
 
 }
 .imgPrincipal:hover{
@@ -173,13 +87,8 @@
 
 }
 .aside{
-    grid-area: aside;
     color: #f0f8ff62;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-
+    
 }
 .btn3{
     box-shadow: none;
@@ -199,32 +108,18 @@
 
 }
 .footer{
-    grid-area: footer;
     background-color: #0f2027b0;
-    padding: 5rem;
-
-
-
-}
-/* .footer h5{
-    color: #f0f8ff62;
-    font-size: 20px;
-    margin-left: 10px;
-    margin-bottom: 20px;
-} */
-.redesSociales{
-    display: flex;
-    /* flex-direction: row; */
-    justify-content: space-around;
-    list-style: none;
     
 }
-.redesSociales a{
+.redesSociales{
+    list-style: none;
+}
+.redesSociales li{
     box-shadow: none;
     text-decoration: none;
+    list-style: none;
     color: #f0f8ff62;
     background-color: #0f202762;
-    padding: 10px;
     border-radius: 10%;
     width: 100px;
     height: 40px;
@@ -232,171 +127,14 @@
 
 
 }
-.redesSociales:hover{
-    transform: scale(1.5);
+.redesSociales li:hover{
+    transform: rotateY(360deg);
 }
 
 
-.tarjetas{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin: 40px;
-    color: #f0f8ff62;
 
-}
-.tarjeta{
-    display: flex;
-    flex-direction: column;
-    margin: 20px;
-}
-.tarjeta h3{
+.card{
     background-color: #0F2027;
-    padding: 10px;
-    border-radius: 10px;
+    color:#f0f8ff62;
+    flex-wrap: wrap;
 }
-.img1{
-    background-image: url(../imagenes/colegio.jpg);
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    background-size: cover;
-}
-.img2{
-    background-image: url(../imagenes/payasos.jpg);
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    background-size: cover;
-}
-.img3{
-    background-image: url(../imagenes/electricidad.png);
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    background-size: cover;
-}
-
-
-
-@media (max-width: 605px){
-    
-    .header{
-        flex-direction: column;
-    }
-
-    .navbar ul{
-        flex-direction: column;
-    }
-}
-@media (min-width:756px){
-    .main{
-        flex-direction: row;
-    }
-    .footer{
-        margin-top: 40px;
-    }
-    .imgPrincipal{
-        width: 500px;
-        height: 250px;
-    }
-    .tarjetas{
-        flex-direction: row;
-    }
-}
-@media (min-width:950px){
-    .imgPrincipal{
-        width: 500px;
-        height: 350px;
-    }
-}
-
-
-
-
-
-
-
-
-/* @media(min-width:600px){
-    .btn1{
-        margin-left: 30px;
-    }
-    .header{
-        margin-bottom: 50px;
-    }
-    .main{
-        flex-direction: row;
-        margin: 0 80px;
-
-
-    }
-    .parrafos{
-        align-items: flex-start;
-        margin: 30px;
-    }
-    .parrafos div p {
-        text-align: start;
-    }
-    .aside{
-        flex-direction: row;
-        background-color: #0f2027b0;
-
-        margin-top: 60px;
-    } */
-    /* .footer{
-
-        margin-top: 50px;
-
-    } */
-    /* .imgPrincipal{
-        background-image: url(../imagenes/MIA.gif);
-        width: 400px;
-        height: 400px;
-        border-radius: 50%;
-        background-size: cover;
-        margin-right: 25px;
-
-    } */
-
-    /* .contenedor{
-        grid-template-rows: 70px 100px 400px 130px ;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-areas: "navbar navbar navbar"
-                            "header header header"
-                            "main   main   main"
-                            "aside  footer footer";
-    }
-
-} */
-/* .contenedorGaleria{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-template-areas: "navbar navbar navbar"
-                        "header header header"
-                        "main main main"
-                        "footer footer footer";
-    flex-direction: column; */
-    /*background: #0F2027;   fallback for old browsers */
-    /*background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
-    /*background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-/* } */
-
-
-/* @media (min-width:600px){
-    .imgPrincipal{
-        width: 1100px;
-    }
-    .tarjetas{
-        flex-direction: row;
-
-    }
-    .tarjeta{
-        margin-left: 30px;
-    }
-}
-@media (min-width: 1000px ){
-    .imgPrincipal{
-        width: 900px;
-    }
-} */
